--- a/index.html
+++ b/index.html
@@ -3,17 +3,122 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Proza+Libre:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <script src="https://kit.fontawesome.com/d302b3e2ff.js" crossorigin="anonymous"></script>
     <title>Jolene W. Portfolio</title>
 </head>
 <body>
-    <header></header>
+    <!-- <div class="preloader">
+        <svg
+        version="1.1"
+        id="logo"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        x="0px"
+        y="0px"
+        width="107.667px"
+        height="112.667px"
+        viewBox="0 0 107.667 112.667"
+        enable-background="new 0 0 107.667 112.667"
+        xml:space="preserve"
+      >
+      <defs>
+          <clipPath id="clip-letters">
+            <path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M73.695,47.425c-0.246-2.197-0.502-4.23-0.691-6.271
+	c-0.168-1.807,0.283-2.19,2.477-2.155c0.107,0.334,0.357,0.714,0.322,1.066c-0.312,3.158,0.527,6.184,1,9.253
+	c0.271,1.758,0.146,3.462-0.814,5.124c-2.621-0.665-0.971-3.133-2.037-4.391c-3.604,0.438-7.299-1.285-11.129,0.207
+	c0.629,0.87,1.18,1.54,1.627,2.271c1.047,1.706,0.844,3.379-0.596,4.761c-1.764,1.694-4.029,2.232-6.346,2.503
+	c-2.281,0.266-4.582,0.372-7.503,0.598c0.952,0.819,1.485,1.326,2.068,1.768c0.764,0.579,1.611,1.054,2.344,1.667
+	c1.518,1.269,1.451,2.601-0.24,3.66c-1.555,0.976-3.209,1.792-4.795,2.72c-1.544,0.903-1.649,1.529-0.43,2.755
+	c0.497,0.5,1.089,1.002,1.734,1.244c3.479,1.307,7.002,2.179,10.776,1.236c3.457-0.864,5.52-3.062,6.434-6.381
+	c0.311-1.127,0.85-1.866,1.922-2.224c1.059-0.353,1.709,0.08,1.834,1.189c0.018,0.158,0.025,0.327-0.014,0.479
+	c-0.836,3.309,0.24,6.494,0.656,9.717c0.109,0.852,0.471,1.68,0.779,2.495c0.473,1.252,0.184,2.158-0.861,2.505
+	c-1.264,0.418-2.271-0.07-2.549-1.403c-0.311-1.481-0.438-3-0.686-4.495c-0.127-0.763-0.34-1.511-0.564-2.478
+	c-0.619,0.343-1.094,0.478-1.383,0.786c-2.801,2.991-6.533,3.229-10.193,3.153c-2.188-0.046-4.369-0.874-6.531-1.44
+	c-2.456-0.645-4.155-2.302-5.453-4.402c-1.172-1.897-0.763-3.527,1.185-4.629c0.832-0.47,1.744-0.796,2.602-1.223
+	c0.571-0.283,1.131-0.601,1.656-0.96c0.247-0.169,0.402-0.472,0.79-0.948c-0.655-0.511-1.245-0.986-1.851-1.44
+	c-1.405-1.053-2.846-2.061-4.216-3.158c-0.616-0.494-1.311-1.198-0.702-2.034c0.423-0.58,1.14-1.174,1.809-1.296
+	c1.161-0.21,2.388-0.047,3.586-0.062c2.395-0.031,4.807,0.083,7.176-0.178c1.457-0.161,2.918-0.77,4.25-1.432
+	c1.064-0.527,1.205-1.551,0.367-2.388c-1.4-1.396-2.789-2.754-5.193-2.211c-3.188,0.721-6.495,0.928-9.671,1.688
+	c-3.236,0.772-6.482,0.897-9.755,0.863c-3.383-0.036-6.401-1.174-9.043-3.323c-3.057-2.487-3.08-6.81-1.731-9.39
+	c1.085-2.076,2.878-3.117,5.167-3.436c2.886-0.401,5.589,0.341,8.162,1.455c3,1.299,5.896,2.84,8.833,4.285
+	c2.651,1.304,5.273,2.671,7.958,3.901c0.834,0.383,1.865,0.67,2.75,0.556c4.455-0.579,8.895-1.009,13.363-0.168
+	C72.715,47.485,73.109,47.425,73.695,47.425z M52.318,48.267c-0.273-0.224-0.524-0.508-0.838-0.67
+	c-4.316-2.235-8.612-4.512-12.976-6.649c-2.195-1.075-4.613-1.225-7.022-0.903c-2.232,0.298-3.15,1.244-3.615,3.509
+	c-0.474,2.302,0.058,3.604,1.992,4.922c2.545,1.733,5.473,2.069,8.424,2.298c4.704,0.363,9.108-1.345,13.663-2.02
+	C52.051,48.737,52.125,48.525,52.318,48.267z"
+        />
+          </clipPath>
+        <clipPath id="clip-dot">
+            <path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M74.938,89.946c-1.055,0.001-1.646-0.596-1.602-1.615
+	c0.049-1.146,0.924-2.035,1.943-1.977c0.957,0.056,1.688,0.931,1.646,1.973C76.889,89.271,76.062,89.944,74.938,89.946z"
+        />
+        </clipPath>
+        <clipPath id="clip-circle">
+          <path
+            d="M53.834,95.27c-21.47,0-38.937-17.467-38.937-38.936c0-21.47,17.467-38.937,38.937-38.937
+		c21.469,0,38.936,17.467,38.936,38.937c0,11.661-5.164,22.612-14.168,30.045c-0.428,0.352-1.057,0.29-1.408-0.135
+		c-0.352-0.426-0.291-1.057,0.135-1.408c8.543-7.051,13.441-17.439,13.441-28.502c0-20.367-16.568-36.937-36.936-36.937
+		c-20.368,0-36.937,16.569-36.937,36.937c0,20.366,16.569,36.936,36.937,36.936c6.891,0,13.613-1.911,19.441-5.525
+		c0.471-0.291,1.086-0.146,1.377,0.322c0.291,0.47,0.146,1.086-0.322,1.377C68.186,93.255,61.098,95.27,53.834,95.27z"
+          />
+        </clipPath>
+        </defs>
+
+        <g clip-path="url(#clip-letters)" stroke-width="40">
+            <path class="letters-path" stroke="#000" stroke-miterlimit="10" fill="none" d="M75.48,38.999c0,0-1.047,2.789-0.897,4.751
+	c0.319,4.195,1.94,9.521,1.627,10.272C75.75,55.125,76.469,49,74.172,49s-9.16-1.537-14.672,0c-1.731,0.482-4.1,0.45-5.666,0.75
+	c-4.153,0.796-7.009,1.497-10.004,2.042C39.705,52.542,27,52,26.25,45.375s5.875-7.748,10.125-6.312S60.75,50.5,61.75,51.375
+	s3.861,2.989-0.625,5.75s-13.893,0.541-15,2s7.367,4.389,7.709,6.375s-7.709,3.375-7.584,5.5s1.875,3.25,3.375,4.125
+	s8.625,3.25,12.75,1.5s7.059-5.212,7.25-7.5s0.125,4.254,1.125,8.127s1.461,5.97,1.461,5.97"/> 
+        </g>
+
+        <g clip-path="url(#clip-dot)" stroke-width="40">
+            <path class="dot-path" fill="#000" d="M74.938,89.946c-1.055,0.001-1.646-0.596-1.602-1.615
+	c0.049-1.146,0.924-2.035,1.943-1.977c0.957,0.056,1.688,0.931,1.646,1.973C76.889,89.271,76.062,89.944,74.938,89.946z"/>
+        </g>
+
+        <g clip-path="url(#clip-circle)" stroke-width="40">
+            <path class="circle-path" stroke="#000" stroke-miterlimit="10" fill="none" d="M74.652,88.066c0,0-8.16,5.127-16.527,6.059
+	C49.757,95.057,40.5,92.453,35.5,89.227S19.603,77.166,17.25,66.75s-1.487-25.25,8.006-35.375S46.01,17.819,55.75,18.5
+	s23.445,6.104,29.375,16.25s7.625,18.125,5.75,30.125S77.889,85.486,77.193,86.244"/>
+        </g>
+
+      </svg>
+    </div> -->
+    <header>
+        <nav class="navbar">
+            <div class="brand">
+                <img src="images/jolenewai@2x.png" alt="Jolene W. Portfolio" width="100%">
+            </div>
+            <div class="navlinks">
+                <a>About Me</a>
+                <a>Graphic Designs</a>
+                <a>Web Projects</a>
+                <a>Contact Me</a>
+            </div>
+            <div class="social-links">
+                <a><i class="fab fa-instagram"></i></a>
+                <a><i class="fab fa-linkedin"></i></a>
+                <a><i class="fab fa-behance-square"></i></a>
+            </div>
+        </nav>
+    </header>
     <section>
 
     </section>
     <footer></footer>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
