--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Jolene W. Portfolio</title>
 </head>
 <body>
-    <!-- <div class="preloader">
+    <div class="preloader">
         <svg
         version="1.1"
         id="logo"
@@ -95,17 +95,17 @@
         </g>
 
       </svg>
-    </div> -->
+    </div>
     <header>
         <nav class="navbar">
             <div class="brand">
-                <img src="images/jolenewai@2x.png" alt="Jolene W. Portfolio" width="100%">
+                <img src="images/jolenewai.png" alt="Jolene W. Portfolio" width="100%">
             </div>
             <div class="navlinks">
-                <a>About Me</a>
-                <a>Graphic Designs</a>
-                <a>Web Projects</a>
-                <a>Contact Me</a>
+                <a href="#">About Me</a>
+                <a href="#">Graphic Designs</a>
+                <a href="#">Web Projects</a>
+                <a href="#">Contact Me</a>
             </div>
             <div class="social-links">
                 <a><i class="fab fa-instagram"></i></a>
@@ -115,7 +115,9 @@
         </nav>
     </header>
     <section>
-
+        <div class="main-banner">
+            
+        </div>
     </section>
     <footer></footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
